<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrbuggy3_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="james.goppert@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mrbuggy3_description</exec_depend>
  <exec_depend>mrbuggy3_nav2</exec_depend>
  <exec_depend>synapse_ros</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>corti</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
